syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {}
}

message CreateOrderRequest {
  string userId = 1;
  repeated OrderItem items = 2;
  string shippingAddressId = 3;
}

message CreateOrderResponse {
  bool success = 1;
  Order order = 2;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  bool success = 1;
  Order order = 2;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  Order order = 2;
}

message Order {
  string id = 1;
  string userId = 2;
  string status = 3;
  double totalAmount = 4;
  string shippingAddressId = 5;
  repeated OrderItem items = 6;
  string paymentId = 7;
  Shipping shipping = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message OrderItem {
  string id = 1;
  string variantId = 2;
  int32 quantity = 3;
  double price = 4;
  string name = 5;
  string sku = 6;
  string createdAt = 7;
  string updatedAt = 8;
}


message Shipping {
  string id = 1;
  string method = 2;
  string trackingNumber = 3;
  string status = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

